# cookiecutter-deep-learning

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: Makefile  README.md  pyproject.toml  train.py
{{ cookiecutter.repo_name }}/configs/: train.yaml
{{ cookiecutter.repo_name }}/configs/data/: default.yaml
{{ cookiecutter.repo_name }}/configs/model/: default.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/data/: dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/models/: architecture.py
