[project]
name = "cookiecutter-deep-learning"
version = "0.1.0"
description = "A modern cookiecutter template for Deep Learning projects."
authors = [{name = "pierGit7"}]
requires-python = ">=3.9"

[tool.ruff]
line-length = 89
# Exclude the template directory because Jinja syntax ({{ }}) is invalid Python
# and will cause ruff to fail when linting the template repo itself.
exclude = [
    "{{ cookiecutter.repo_name }}",
    ".git",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
