[build-system]
{%- if cookiecutter.package_manager == 'uv' %}
requires = ["hatchling"]
build-backend = "hatchling.build"
{%- else %}
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
{%- endif %}

[project]
name = "{{ cookiecutter.module_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}" },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
{%- if cookiecutter.dl_framework == 'keras3' %}
    "keras>=3.0.0",
    "tensorflow-cpu",
{%- elif cookiecutter.dl_framework == 'pytorch' %}
    "torch",
    "torchvision",
{%- elif cookiecutter.dl_framework == 'tensorflow' %}
    "tensorflow",
{%- endif %}
{%- if cookiecutter.experiment_tracker == 'wandb' %}
    "wandb",
{%- elif cookiecutter.experiment_tracker == 'tensorboard' %}
    "tensorboard",
{%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 99
src = ["{{ cookiecutter.module_name }}"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.module_name }}"]
force-sort-within-sections = true
